Properly handling exception and range limitation logic